--- a/requirements3.txt
+++ b/requirements3.txt
@@ -1,7 +1,5 @@
-tensorflow==2.0.0
+tensorflow==2.2.0
 Keras==2.2.4
-sklearn
-numpy==1.16.2
-matplotlib==3.1.0
-h5py==2.9.0
+scikit-learn
 keras-tuner==1.0.0
+protobuf==3.20.0
