--- a/requirements3.txt
+++ b/requirements3.txt
@@ -1,5 +1,8 @@
-tensorflow==2.2.0
+tensorflow==2.0.0
+tensorflow-gpu==2.0.0
 Keras==2.2.4
-scikit-learn
+sklearn
+numpy==1.16.2
+matplotlib==3.1.0
+h5py==2.9.0
 keras-tuner==1.0.0
-protobuf==3.20.0
